Agentforce/force-app/main/default/objects/Occupational_Health_Referral__c/Occupational_Health_Referral__c.object-meta.xml
<CustomObject>
    <label>Occupational Health Referral</label>
    <nameField>
        <displayFormat>OHR-{00000}</displayFormat>
        <label>Occupational Health Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Occupational Health Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>