Agentforce/force-app/main/default/objects/Occupational_Health_Referral__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Occupational Health Referrals</relationshipLabel>
    <relationshipName>Occupational_Health_Referrals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>