Agentforce/force-app/main/default/objects/Occupational_Health_Referral__c/fields/Case_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>Case_CaseSafeID__c</fullName>
    <formula>Case__r.CaseSafeID__c</formula>
    <label>Case CaseSafeID</label>
    <type>Text</type>
</CustomField>