Agentforce/force-app/main/default/objects/Occupational_Health_Referral__c/fields/Legacy_Medigold_Referral_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Medigold_Referral_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Legacy Medigold Referral Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>