Agentforce/force-app/main/default/objects/Occupational_Health_Referral__c/fields/OHealth_CaseSafeId__c.field-meta.xml
<CustomField>
    <fullName>OHealth_CaseSafeId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OHealth CaseSafeId</label>
    <type>Text</type>
</CustomField>