Agentforce/force-app/main/default/objects/Occupational_Health_Referral__c/fields/Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Date__c</fullName>
    <label>Referral Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>