Agentforce/force-app/main/default/objects/Occupational_Health_Referral__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <inlineHelpText>The Date of the Received Report</inlineHelpText>
    <label>Report Date</label>
    <type>Date</type>
</CustomField>