Agentforce/force-app/main/default/objects/Occupational_Health_Referral__c/fields/Report_Received__c.field-meta.xml
<CustomField>
    <fullName>Report_Received__c</fullName>
    <description>Ticked if the Report Date field is completed. Used in visibility criteria for the Report Received button on the Occupational Health Lightning Page</description>
    <formula>NOT(ISBLANK(Report_Date__c))</formula>
    <label>Report Received</label>
    <type>Checkbox</type>
</CustomField>