Agentforce/force-app/main/default/objects/Occupational_Health_Referral__c/fields/Welfare_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Welfare_Meeting__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Welfare Meeting</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Welfare Meeting and Occupational Health Referral must relate to the same Case</errorMessage>
        <filterItems>
            <field>Welfare_Meeting__c.Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Welfare_Meeting__c</referenceTo>
    <relationshipLabel>Occupational Health Referrals</relationshipLabel>
    <relationshipName>Occupational_Health_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>